Add Icon, Flesh Out Web Request

--- a/response-tweaker/response-tweaker/response-tweaker.csproj
+++ b/response-tweaker/response-tweaker/response-tweaker.csproj
@@ -89,6 +89,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <None Include="Assets\images\icon.xcf" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
@@ -111,6 +112,8 @@
     <None Include="response-tweaker_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Package.StoreAssociation.xml" />
+    <Content Include="Assets\images\icon.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
