--- a/response-tweaker/response-tweaker/response-tweaker.csproj
+++ b/response-tweaker/response-tweaker/response-tweaker.csproj
@@ -19,7 +19,8 @@
     <PackageCertificateKeyFile>response-tweaker_TemporaryKey.pfx</PackageCertificateKeyFile>
     <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
     <AppxBundle>Always</AppxBundle>
-    <AppxBundlePlatforms>x64</AppxBundlePlatforms>
+    <AppxBundlePlatforms>x86|x64</AppxBundlePlatforms>
+    <PackageCertificateThumbprint>BE97244BD3847544160DE31486B6B7A4F4017D20</PackageCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
