--- a/response-tweaker/response-tweaker/response-tweaker.csproj
+++ b/response-tweaker/response-tweaker/response-tweaker.csproj
@@ -16,11 +16,11 @@
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <PackageCertificateKeyFile>response-tweaker_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>response-tweaker_StoreKey.pfx</PackageCertificateKeyFile>
     <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>x64</AppxBundlePlatforms>
-    <PackageCertificateThumbprint>522F5657A657D306D62DF6E8B83871958CC77750</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>87CB7DAC999D84EE4767E0A35351860973C5EDB6</PackageCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -113,6 +113,7 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <None Include="response-tweaker_StoreKey.pfx" />
     <None Include="response-tweaker_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
